--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -43,7 +43,7 @@
           <p>Popular Tags</p>
 
           <div class="tag-list">
-            <a *ngFor="let tag of tags"
+            <a *ngFor="let tag of tags; trackBy: trackByFn"
                (click)="setListTo('all', {tag: tag})"
                class="tag-default tag-pill">
                {{ tag }}
