--- a/src/app/shared/list-errors.component.html
+++ b/src/app/shared/list-errors.component.html
@@ -1,5 +1,5 @@
 <ul class="error-messages" *ngIf="errorList">
-  <li *ngFor="let error of errorList">
+  <li *ngFor="let error of errorList; trackBy: trackByFn">
     {{ error }}
   </li>
 </ul>
