--- a/src/app/shared/article-helpers/article-meta.component.html
+++ b/src/app/shared/article-helpers/article-meta.component.html
@@ -1,6 +1,6 @@
 <div class="article-meta">
   <a [routerLink]="['/profile', article.author.username]">
-    <img [src]="article.author.image" />
+    <img [src]="article.author.image" alt="author image" />
   </a>
 
   <div class="info">
