ABC-1212 : test commit

--- a/src/app/editor/editor.component.html
+++ b/src/app/editor/editor.component.html
@@ -14,6 +14,12 @@
                 type="text"
                 placeholder="Article Title" />
             </fieldset>
+            <fieldset class="form-group">
+              <input class="form-control form-control-lg"
+                formControlName="title"
+                type="text"
+                placeholder="Article Title" />
+            </fieldset>
 
             <fieldset class="form-group">
               <input class="form-control"
