--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,7 +2,7 @@
 
   <div class="banner" *appShowAuthed="false">
     <div class="container">
-      <h1 class="logo-font">conduit</h1>
+      <h1 class="logo-font">Fuck SaiKumar</h1>
       <p>A place to share your <i>Angular</i> knowledge.</p>
     </div>
   </div>
