--- a/src/app/article/article-comment.component.html
+++ b/src/app/article/article-comment.component.html
@@ -1,7 +1,7 @@
 <div class="card">
   <div class="card-block">
     <p class="card-text">
-      {{ comment.body }}
+      {{ comment.body 123 }}
     </p>
   </div>
   <div class="card-footer">
