--- a/src/app/article/article-comment.component.html
+++ b/src/app/article/article-comment.component.html
@@ -16,7 +16,7 @@
       {{ comment.createdAt | date: 'longDate' }}
     </span>
     <span class="mod-options" [hidden]="!canModify">
-      <i class="ion-trash-a" (click)="deleteClicked()"></i>
+      <em class="ion-trash-a" (click)="deleteClicked()"></em>
     </span>
   </div>
 </div>
