--- a/src/app/features/article/article.component.html
+++ b/src/app/features/article/article.component.html
@@ -97,7 +97,7 @@
 
     <div class="row">
       <div class="col-xs-12 col-md-8 offset-md-2">
-        <div *appShowAuthed="true">
+        <div *ifAuthenticated="true">
           <app-list-errors [errors]="commentFormErrors"></app-list-errors>
           <form class="card comment-form" (ngSubmit)="addComment()">
             <fieldset [disabled]="isSubmitting">
@@ -122,7 +122,7 @@
           </form>
         </div>
 
-        <div *appShowAuthed="false">
+        <div *ifAuthenticated="false">
           <a [routerLink]="['/login']">Sign in</a> or
           <a [routerLink]="['/register']">sign up</a> to add comments on this
           article.
