--- a/src/app/features/home/home.component.html
+++ b/src/app/features/home/home.component.html
@@ -1,5 +1,5 @@
 <div class="home-page">
-  <div class="banner" *appShowAuthed="false">
+  <div class="banner" *ifAuthenticated="false">
     <div class="container">
       <h1 class="logo-font">conduit</h1>
       <p>A place to share your <i>Angular</i> knowledge.</p>
