--- a/src/app/shared/list-errors.component.html
+++ b/src/app/shared/list-errors.component.html
@@ -1,5 +1,7 @@
-<ul class="error-messages" *ngIf="errorList">
-  <li *ngFor="let error of errorList">
-    {{ error }}
-  </li>
-</ul>
+@if (errorList) {
+  <ul class="error-messages">
+    @for (error of errorList; track error) {
+      <li>{{ error }}</li>
+    }
+  </ul>
+}
