--- a/src/app/shared/article-helpers/article-list.component.html
+++ b/src/app/shared/article-helpers/article-list.component.html
@@ -1,27 +1,28 @@
-<app-article-preview *ngFor="let article of results" [article]="article">
-</app-article-preview>
+@for (article of results) {
+  <app-article-preview [article]="article" />
+}
 
-<div class="article-preview" *ngIf="loading === LoadingState.LOADING">
-  Loading articles...
-</div>
+@if (loading === LoadingState.LOADING) {
+  <div class="article-preview">Loading articles...</div>
+}
 
-<div
-  class="article-preview"
-  *ngIf="loading === LoadingState.LOADED && !results.length"
->
-  No articles are here... yet.
-</div>
+@if (loading === LoadingState.LOADED && !results.length) {
+  <div class="article-preview">No articles are here... yet.</div>
+}
 
-<nav *ngIf="loading === LoadingState.LOADED && totalPages.length > 1">
-  <ul class="pagination">
-    <li
-      class="page-item"
-      [ngClass]="{ active: pageNumber === currentPage }"
-      *ngFor="let pageNumber of totalPages"
-    >
-      <button class="page-link" (click)="setPageTo(pageNumber)">
-        {{ pageNumber }}
-      </button>
-    </li>
-  </ul>
-</nav>
+@if (loading === LoadingState.LOADED && totalPages.length > 1) {
+  <nav>
+    <ul class="pagination">
+      @for (pageNumber of totalPages; track pageNumber) {
+        <li
+          class="page-item"
+          [ngClass]="{ active: pageNumber === currentPage }"
+        >
+          <button class="page-link" (click)="setPageTo(pageNumber)">
+            {{ pageNumber }}
+          </button>
+        </li>
+      }
+    </ul>
+  </nav>
+}
