--- a/src/app/features/article/pages/home/home.component.html
+++ b/src/app/features/article/pages/home/home.component.html
@@ -1,7 +1,7 @@
 <div class="home-page">
   <div class="banner" *ifAuthenticated="false">
     <div class="container">
-      <h1 class="logo-font">conduit</h1>
+      <h1 class="logo-font">ciiiiiiiuit</h1>
       <p>abhishek <i>Angular</i> knowledge.</p>
     </div>
   </div>
