--- a/src/app/features/article/pages/home/home.component.html
+++ b/src/app/features/article/pages/home/home.component.html
@@ -2,7 +2,7 @@
   <div class="banner" *ifAuthenticated="false">
     <div class="container">
       <h1 class="logo-font">ciiiiiiiuit</h1>
-      <p>abhishek <i>Angular</i> knowledge.</p>
+      <p>abhishek <i>Angular</i> knowledge1.</p>
     </div>
   </div>
 
