--- a/src/app/features/settings/settings.component.html
+++ b/src/app/features/settings/settings.component.html
@@ -50,6 +50,7 @@
                 class="form-control form-control-lg"
                 type="password"
                 placeholder="New Password"
+                autocomplete=""
                 formControlName="password"
               />
             </fieldset>
