--- a/src/app/features/article/pages/editor/editor.component.html
+++ b/src/app/features/article/pages/editor/editor.component.html
@@ -57,7 +57,7 @@
               type="button"
               (click)="submitForm()"
             >
-              Publish Article
+              Publihs Article
             </button>
           </fieldset>
         </form>
