--- a/src/app/features/article/pages/editor/editor.component.html
+++ b/src/app/features/article/pages/editor/editor.component.html
@@ -52,11 +52,7 @@
               </div>
             </fieldset>
 
-            <button
-              class="btn btn-lg pull-xs-right btn-primary"
-              type="button"
-              (click)="submitForm()"
-            >
+            <button class="btn btn-lg pull-xs-right btn-primary" type="button" (click)="submitForm()">
               Publish Article
             </button>
           </fieldset>
