--- a/src/app/features/profile/pages/profile/profile.component.html
+++ b/src/app/features/profile/pages/profile/profile.component.html
@@ -8,16 +8,10 @@
             <h4>{{ profile.username }}</h4>
             <p>{{ profile.bio }}</p>
             @if (!isUser) {
-              <app-follow-button
-                [profile]="profile"
-                (toggle)="onToggleFollowing($event)"
-              />
+              <app-follow-button [profile]="profile" (toggle)="onToggleFollowing($event)" />
             }
             @if (isUser) {
-              <a
-                [routerLink]="['/settings']"
-                class="btn btn-sm btn-outline-secondary action-btn"
-              >
+              <a [routerLink]="['/settings']" class="btn btn-sm btn-outline-secondary action-btn">
                 <i class="ion-gear-a"></i> Edit Profile Settings
               </a>
             }
