--- a/src/app/core/layout/footer.component.html
+++ b/src/app/core/layout/footer.component.html
@@ -2,10 +2,8 @@
   <div class="container">
     <a class="logo-font" routerLink="/">conduit</a>
     <span class="attribution">
-      &copy; {{ today | date: "yyyy" }}. An interactive learning project from
-      <a href="https://github.com/gothinkster/realworld"
-        >RealWorld OSS Project</a
-      >. Code licensed under MIT.
+      &copy; {{ today | date: 'yyyy' }}. An interactive learning project from
+      <a href="https://github.com/gothinkster/realworld">RealWorld OSS Project</a>. Code licensed under MIT.
     </span>
   </div>
 </footer>
